# xhaskell

./: LICENSE  README.md  TODO  xhaskell.cabal
Language/: XHaskell.hs
Language/XHaskell/: Environment.hs  Error.hs  LocalTypeInference.hs  Source.hs  Subtype.hs  Target.hs  TypeSpec.hs
test/: Mongo1.hs  NestedPatMatch.hs  OptionalRecField.hs  Popl2014.hs  Simple.hs  TestXHaskell.hs  XPathFullAnnotation.hs  XPathNoAnnotation.hs
