Name:                   xhaskell
Version:                0.0.1
License:                BSD3
License-File:           LICENSE
Copyright:              Copyright (c) 2010-2014, Kenny Zhuo Ming Lu and Martin Sulzmann
Author:                 Kenny Zhuo Ming Lu and Martin Sulzmann
Maintainer:             luzhuomi@gmail.com, martin.sulzmann@gmail.com
Stability:              Beta
Homepage:               http://code.google.com/p/xhaskell/
Synopsis:               Implementing XHaskell As a Library API
Description:            XHaskell is a language extension to Haskell with regular expression type and semantic subtyping found in XDuce 
Category:               Language
Tested-With:            GHC
Build-Type:             Simple
Cabal-Version:          >= 1.2.3

flag base4

library 
  Build-Depends:         haskell-src-exts, mtl, containers
  Build-Depends:         base >= 4.0 && < 5.0, ghc-prim, template-haskell
  Exposed-Modules:       Language.XHaskell
                         Language.XHaskell.Target
                         Language.XHaskell.Source
                         Language.XHaskell.TypeSpec
                         Language.XHaskell.Subtype
                         Language.XHaskell.Error
                         Language.XHaskell.Environment
                         Language.XHaskell.LocalTypeInference
  Buildable:             True
  Extensions:            MultiParamTypeClasses, FunctionalDependencies, FlexibleInstances, TypeSynonymInstances, FlexibleContexts
  GHC-Options:            -threaded -O2 -funbox-strict-fields
  GHC-Prof-Options:       -auto-all
